# lang_learn

cpython/: ReadMe.md  guide_to_the_parser.md
cpython/Basic/: refcount.md
cpython/Compiler/: compile.md
cpython/Internel/: global_objects.md
cpython/Parser/: tokenizer.md
flex_bison/frontend/: lex.yy.c  y.tab.c
flex_bison/src/frontend/: tcc
llvm-Kaleidoscope/ch2/test_ch2/: test_ch2.sln
llvm-Kaleidoscope/ch2/test_ch2/ConsoleApplication1/: ConsoleApplication1.vcxproj
llvm-simple-lang/: CMakeLists.txt  build.sh
llvm-simple-lang/cmake/: AddSimpleLang.cmake
llvm-simple-lang/simplelang/include/: lexer.h
llvm-simple-lang/simplelang/src/: CMakeLists.txt  lexer.cpp
llvm-simple-lang/simplelang/tools/: CMakeLists.txt  driver.cpp
llvm/ArithmeticStatement/: HelloArithmeticStatement  arithmetic_stat.cpp
llvm/BasicBlock/: HelloBlock  block.cpp
llvm/GlobalVariable/: HelloGlobalVariable
llvm/examples_src/GlobalVariable/: global_variable.cpp
llvm/examples_src/if-else/: if_else.cpp
llvm/examples_src/llvm-simple-lang/: CMakeLists.txt
llvm/examples_src/module/: build.sh  module.cpp
llvm/function/: HelloFunction  function.cpp
llvm/if-else/: HelloIfElse
llvm/llvm-Kaleidoscope/: lexer.cpp
llvm/llvm-Kaleidoscope/Chapter2/: toy.cpp
llvm/llvm-Kaleidoscope/Chapter3/: toy.cpp
llvm/llvm-Kaleidoscope/Chapter4/: toy.cpp
llvm/llvm-case/: test  test.bc  test.ll  test.s
llvm/llvm-simple-lang/: lang.spec
llvm/module/: HelloModule
llvm/passes/: print-alias-sets.md
misc/taichi/: decorator.py
taichi/: test.py
(+13 files in other folders)
